--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -15,7 +15,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-###   `r as.character(Sys.Date())`
+
 
 ```{r include=FALSE,echo=FALSE}
 require(tidyverse)
@@ -56,7 +56,7 @@ Winnings[j]=brownlow
 }
 hist(Winnings)
 var(Winnings)
-print(mean(Winnings))
+print(paste('average return =' , mean(Winnings)))
 
 ```
 
@@ -102,7 +102,7 @@ Winnings[j]=brownlow
 }
 hist(Winnings)
 var(Winnings)
-print(mean(Winnings))
+print(paste('average return =' , mean(Winnings)))
 
 ```
 
@@ -127,6 +127,6 @@ Winnings[j]=brownlow
 }
 hist(Winnings)
 var(Winnings)
-print(mean(Winnings))
+print(paste('average return =' , mean(Winnings)))
 
 ```
