--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -63,10 +63,13 @@ print(paste('average return =' , mean(Winnings)))
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting!-->
 
+The mean represents the total winnings Brownlow is expected to come away with after making the bet with 1000 classes.
+
 
 # Confidence interval of Brownlows earning
 
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows-->
+The 90% confidence interval represents the range of winnings where you would expect 90% of the outcomes to fall within.
 
 ```{r}
 vSorted = sort(Winnings)
